Fixed overflow which gave visual artifacts

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,7 +10,6 @@ router-outlet {
 
 app-footer {
   margin-top: auto;
-  padding: 20px;
   background-color: #333;
   color: #fff;
   text-align: center;
